[gd_scene load_steps=9 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=6]
[ext_resource path="res://Story.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 976.0
margin_bottom = 475.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder Text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 479.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 12
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 821.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 833.0
margin_right = 906.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 918.0
margin_top = 5.0
margin_right = 976.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 4 )
text = "Ok"

[node name="StoryBook" type="Node" parent="."]

[node name="Story0" type="Node" parent="StoryBook"]
script = ExtResource( 7 )
prompts = PoolStringArray( "um nome", "um substantivo", "um adverbio", "um adjetivo" )
story = "Era uma vez, alguem chamado %s comeu um sanduiche recheado de %s que fez se sentir %s, por dentro. Este foi um dia %s."

[node name="Story1" type="Node" parent="StoryBook"]
script = ExtResource( 7 )
prompts = PoolStringArray( "um substantivo", "um nome", "outro nome", "uma coisa" )
story = "Era uma vez um %s chamado %s, que buscou a vida toda pelo lendario %s %s."

[node name="Story2" type="Node" parent="StoryBook"]
script = ExtResource( 7 )
prompts = PoolStringArray( "um substantivo", "um nome", "outro substantivo" )
story = "Havia uma xicara de %s chamada %s que buscava a origem do(a) %s."

[node name="Story3" type="Node" parent="StoryBook"]
script = ExtResource( 7 )
prompts = PoolStringArray( "uma coisa", "um nome", "uma palavra de descricao (um adjetivo)", "outra coisa" )
story = "Era uma vez um(a) %s chamado(a) %s que vivia %s como um(a) %s."

[node name="Story4" type="Node" parent="StoryBook"]
script = ExtResource( 7 )
prompts = PoolStringArray( "um substantivo", "uma palavra de descricao (um adjetivo)", "outro substantivo", "um adjetivo", "mais um substantivo", "um verbo" )
story = "A melhor receita de pizza. Misture um pacote de %s com três colheres de farinha. Sove a massa por 3 minutos até %s. Abra a massa em um %s e polvilhe uma pitada de %s e tres xicaras de %s. Asse por 17 minutos em fogo alto, depois tire do forno para %s!"
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
